name:                chap01-samples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable chap01-samples-1-1-4
  hs-source-dirs:      .
  main-is:             chap01-samples-1-1-4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap01-samples-1-1-5
  hs-source-dirs:      .
  main-is:             chap01-samples-1-1-5.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
