name:                chap03-samples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
                     
executable chap03-samples-3-2-1
  hs-source-dirs:      .
  main-is:             chap03-samples-3-2-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-4-3
  hs-source-dirs:      .
  main-is:             chap03-samples-3-4-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-4-4
  hs-source-dirs:      .
  main-is:             chap03-samples-3-4-4.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-5
  hs-source-dirs:      .
  main-is:             chap03-samples-3-5.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-6
  hs-source-dirs:      .
  main-is:             chap03-samples-3-6.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-6-data-map
  hs-source-dirs:      .
  main-is:             chap03-samples-3-6-data-map.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable chap03-samples-3-7-1-age
  hs-source-dirs:      .
  main-is:             chap03-samples-3-7-1-age.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-7-1-app-result
  hs-source-dirs:      .
  main-is:             chap03-samples-3-7-1-app-result.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-7-2
  hs-source-dirs:      .
  main-is:             chap03-samples-3-7-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-8-3
  hs-source-dirs:      .
  main-is:             chap03-samples-3-8-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap03-samples-3-9
  hs-source-dirs:      .
  main-is:             chap03-samples-3-9.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
