name:                chap04-samples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable chap04-samples-4-1-3
  hs-source-dirs:      .
  main-is:             chap04-samples-4-1-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-1-3-do
  hs-source-dirs:      .
  main-is:             chap04-samples-4-1-3-do.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-1-3-do-2
  hs-source-dirs:      .
  main-is:             chap04-samples-4-1-3-do-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-2-1
  hs-source-dirs:      .
  main-is:             chap04-samples-4-2-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-1
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-1-setbuffer
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-1-setbuffer.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-3
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-3-counter
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-3-counter.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-3-interact
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-3-interact.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-3-lazy-io
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-3-lazy-io.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-4
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-4.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-3-5
  hs-source-dirs:      .
  main-is:             chap04-samples-4-3-5.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
  default-language:    Haskell2010

executable chap04-samples-4-4-2
  hs-source-dirs:      .
  main-is:             chap04-samples-4-4-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
  default-language:    Haskell2010

executable chap04-samples-4-4-2-find-file
  hs-source-dirs:      .
  main-is:             chap04-samples-4-4-2-find-file.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
  default-language:    Haskell2010

executable chap04-samples-4-4-2-find-file-with
  hs-source-dirs:      .
  main-is:             chap04-samples-4-4-2-find-file-with.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
  default-language:    Haskell2010

executable chap04-samples-4-5-1
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-1-catches
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-1-catches.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-1-finally
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-1-finally.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-1-multiple-exceptions
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-1-multiple-exceptions.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-1-scoped-type-variables
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-1-scoped-type-variables.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-1-zero
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-1-zero.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-2
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap04-samples-4-5-3
  hs-source-dirs:      .
  main-is:             chap04-samples-4-5-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
