name:                chap05-samples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable chap05-samples-5-1-1
  hs-source-dirs:      .
  main-is:             chap05-samples-5-1-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-1-2
  hs-source-dirs:      .
  main-is:             chap05-samples-5-1-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-1-3-game
  hs-source-dirs:      .
  main-is:             chap05-samples-5-1-3-game.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random-shuffle
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-2-1
  hs-source-dirs:      .
  main-is:             chap05-samples-5-2-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-3-2-human
  hs-source-dirs:      .
  main-is:             chap05-samples-5-3-2-human.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-3-3
  hs-source-dirs:      .
  main-is:             chap05-samples-5-3-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-4-1-eSafeDiv
  hs-source-dirs:      .
  main-is:             chap05-samples-5-4-1-eSafeDiv.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-4-1-mSafeDiv
  hs-source-dirs:      .
  main-is:             chap05-samples-5-4-1-mSafeDiv.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-4-2-exSafeDiv
  hs-source-dirs:      .
  main-is:             chap05-samples-5-4-2-exSafeDiv.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-5-1-pow
  hs-source-dirs:      .
  main-is:             chap05-samples-5-5-1-pow.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-5-1-read-round
  hs-source-dirs:      .
  main-is:             chap05-samples-5-5-1-read-round.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-6-1
  hs-source-dirs:      .
  main-is:             chap05-samples-5-6-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-6-2
  hs-source-dirs:      .
  main-is:             chap05-samples-5-6-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
  default-language:    Haskell2010

executable chap05-samples-5-7
  hs-source-dirs:      .
  main-is:             chap05-samples-5-7.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-7-1
  hs-source-dirs:      .
  main-is:             chap05-samples-5-7-1.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-7-fail
  hs-source-dirs:      .
  main-is:             chap05-samples-5-7-fail.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap05-samples-5-8-2
  hs-source-dirs:      .
  main-is:             chap05-samples-5-8-2.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-8-2-count
  hs-source-dirs:      .
  main-is:             chap05-samples-5-8-2-count.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-8-3
  hs-source-dirs:      .
  main-is:             chap05-samples-5-8-3.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
  default-language:    Haskell2010

executable chap05-samples-5-8-6
  hs-source-dirs:      .
  main-is:             chap05-samples-5-8-6.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
  default-language:    Haskell2010

executable chap05-samples-5-8-6-lb
  hs-source-dirs:      .
  main-is:             chap05-samples-5-8-6-lb.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lifted-base
                     , mtl
                     , transformers
  default-language:    Haskell2010
