name:                chap08-samples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable chap08-samples-8-1-2-single-processor
  hs-source-dirs:      .
  main-is:             chap08-samples-8-1-2.hs
  build-depends:       base, monad-par
  default-language:    Haskell2010

executable chap08-samples-8-1-2-multi-processors
  hs-source-dirs:      .
  main-is:             chap08-samples-8-1-2.hs
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N2"
  build-depends:       base, monad-par
  default-language:    Haskell2010

executable chap08-samples-8-2-1
  hs-source-dirs:      .
  main-is:             chap08-samples-8-2-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap08-samples-8-2-3
  hs-source-dirs:      .
  main-is:             chap08-samples-8-2-3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap08-samples-8-3-1
  hs-source-dirs:      .
  main-is:             chap08-samples-8-3-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap08-samples-8-3-2
  hs-source-dirs:      .
  main-is:             chap08-samples-8-3-2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, stm
  default-language:    Haskell2010

executable chap08-samples-8-4
  hs-source-dirs:      .
  main-is:             chap08-samples-8-4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap08-samples-8-4-2
  hs-source-dirs:      .
  main-is:             chap08-samples-8-4-2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable chap08-samples-8-4-3
  hs-source-dirs:      .
  main-is:             chap08-samples-8-4-3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, stm
  default-language:    Haskell2010

executable chap08-samples-8-5-1
  hs-source-dirs:      .
  main-is:             chap08-samples-8-5-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, async, bytestring, http-conduit
  default-language:    Haskell2010

executable chap08-samples-8-5-2-async
  hs-source-dirs:      .
  main-is:             chap08-samples-8-5-2-async.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, async
  default-language:    Haskell2010

executable chap08-samples-8-5-2-withAsync
  hs-source-dirs:      .
  main-is:             chap08-samples-8-5-2-withAsync.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, async
  default-language:    Haskell2010

executable chap08-samples-8-5-2-race_
  hs-source-dirs:      .
  main-is:             chap08-samples-8-5-2-race_.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, async
  default-language:    Haskell2010

executable chap08-samples-8-5-3
  hs-source-dirs:      .
  main-is:             chap08-samples-8-5-3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, async, safe-exceptions
  default-language:    Haskell2010

executable chap08-samples-8-6-1
  hs-source-dirs:      .
  main-is:             chap08-samples-8-6-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, parallel
  default-language:    Haskell2010

executable chap08-samples-8-6-2
  hs-source-dirs:      .
  main-is:             chap08-samples-8-6-2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, monad-par
  default-language:    Haskell2010
