name:                hjq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hjq#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Hjq
                     , Data.Hjq.Parser 
                     , Data.Hjq.Query
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , text
                     , bytestring
                     , unordered-containers
                     , lens-aeson
                     , lens
                     , vector
                     , errors
  default-language:    Haskell2010

executable hjq
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hjq
                     , bytestring
                     , text
  ghc-options:       -Wall
  default-language:    Haskell2010

test-suite hjq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserTest
  build-depends:       base
                     , aeson
                     , hjq
                     , vector
                     , text
                     , unordered-containers
                     , HUnit
                     , lens-aeson
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hjq
